# Squeek

./: .gitignore  CLAUDE.md  CMakeLists.txt  FSD.md  README.md  build_log.txt  fix_app_offset.py  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-c6-devkitc-1  sdkconfig.esp32c6-supermini
.claude/: settings.local.json
data/: index.html
docs/plans/: 2026-02-17-debug-cli-implementation.md  2026-02-17-debug-cli-redesign.md
include/: audio_engine.h  audio_i2s.h  audio_tweeter.h  bsp.hpp  clock_sync.h  debug_cli.h  debug_menu.h  ftm_manager.h  ftm_scheduler.h  led_driver.h  mesh_conductor.h  mesh_manager.h  nvs_config.h  nvs_config_registry.h  orchestrator.h  ota_manager.h  peer_table.h  position_solver.h  power_manager.h  property_value.h  rtc_mesh_map.h  sample_player.h  setup_delegate.h  sq_log.h  stealth_manager.h  storage_manager.h  tone_library.h  web_server.h
src/: CMakeLists.txt  audio_engine.cpp  audio_i2s.cpp  audio_tweeter.cpp  clock_sync.cpp  debug_cli.cpp  debug_menu.cpp  ftm_manager.cpp  ftm_scheduler.cpp  led_driver.cpp  main.cpp  mesh_conductor.cpp  mesh_gateway.cpp  mesh_manager.cpp  mesh_node.cpp  nvs_config.cpp  nvs_config_registry.cpp  orchestrator.cpp  ota_manager.cpp  peer_table.cpp  position_solver.cpp  power_manager.cpp  rtc_mesh_map.cpp  sample_player.cpp  setup_delegate.cpp  stealth_manager.cpp  storage_manager.cpp  tone_library.cpp  web_server.cpp
tools/: README.md  upload_all.config.json  upload_all.py
tools/monitor/: multi_monitor.py
