idf_component_register(SRCS
    "main.cpp"
    "led_driver.cpp"
    "rtc_mesh_map.cpp"
    "power_manager.cpp"
    "mesh_conductor.cpp"
    "mesh_gateway.cpp"
    "mesh_node.cpp"
    "debug_cli.cpp"
    "nvs_config.cpp"
    "peer_table.cpp"
    "ftm_manager.cpp"
    "ftm_scheduler.cpp"
    "position_solver.cpp"
    "audio_engine.cpp"
    "audio_tweeter.cpp"
    "audio_i2s.cpp"
    "tone_library.cpp"
    "sample_player.cpp"
    "storage_manager.cpp"
    "orchestrator.cpp"
    "clock_sync.cpp"
    "web_server.cpp"
    "stealth_manager.cpp"
    "ota_manager.cpp"
)
